# docs/swagger/swagger.json
@@ -166,6 +166,43 @@
                 }
             }
         },
+        "/comment_on": {
+            "post": {
+                "description": "CommentOn is an endpoint called when an applicant reply a comment to a particular job position.",
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "CommentOn",
+                "parameters": [
+                    {
+                        "description": "CommentOnRequest is a POST JSON type",
+                        "name": "body",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.CommentOnRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success on commenting",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.CommentOnResponseSuccess"
+                        }
+                    },
+                    "400": {
+                        "description": "invalid parent type",
+                        "schema": {
+                            "type": "object",
+                            "$ref": "#/definitions/model.CommentOnResponseAPIError0"
+                        }
+                    }
+                }
+            }
+        },
         "/get_all_companies": {
             "get": {
                 "description": "GetAllCompanies is an endpoint that returns companies list from schemaless database",
@@ -180,7 +217,7 @@
         },
         "/post_position": {
             "post": {
-                "description": "PostPosition is an endpoint called when an applicant create a referral position with dedicated JSON.",
+                "description": "PostPosition is an endpoint called when an referral create a job position to refer with dedicated JSON.",
                 "consumes": [
                     "application/json"
                 ],
@@ -199,7 +236,7 @@
                 ],
                 "responses": {
                     "200": {
-                        "description": "Success: verification email sent",
+                        "description": "Success: position created",
                         "schema": {
                             "type": "object",
                             "$ref": "#/definitions/model.PostPositionResponseSuccess"
@@ -529,6 +566,47 @@
                 "message": {
                     "type": "string",
                     "example": "verification email sent"
+                }
+            }
+        },
+        "model.CommentOnRequest": {
+            "type": "object",
+            "properties": {
+                "Content": {
+                    "type": "string"
+                },
+                "ParentId": {
+                    "type": "string",
+                    "example": "ee3bc72c-9804-498b-be9d-c77471374e0a"
+                },
+                "ParentType": {
+                    "type": "string"
+                },
+                "PositionId": {
+                    "type": "string",
+                    "example": "67bebc0c-f0bd-4352-b588-08a056085e0a"
+                },
+                "Username": {
+                    "type": "string",
+                    "example": "wang374"
+                }
+            }
+        },
+        "model.CommentOnResponseAPIError0": {
+            "type": "object",
+            "properties": {
+                "error": {
+                    "type": "string",
+                    "example": "invalid parent type"
+                }
+            }
+        },
+        "model.CommentOnResponseSuccess": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Success on commenting: status 200"
                 }
             }
         },
